# mcp-client-from-scratch

./: .gitignore  HTTPS_CLIENT_PLAN.md  README.md  SESSION_PERSISTENCE_PLAN.md  STARTUP_PLAN.md  package.json  pyproject.toml
.github/workflows/: update_postman.yml
src/mcp_client_scratch/: main.py  server_config_all.json
src/mcp_client_scratch/classes/: Agent.py  ClientManager.py  MCPClient.py  MCPClient_copy.py  OpenAIClient.py  Process.py  ServerConfig.py  SessionStore.py  VectorStore.py
src/mcp_client_scratch/dependencies/: app_state.py  connections.py  tests.py
src/mcp_client_scratch/mcp/: MCPClient.py  init_connection.py
src/mcp_client_scratch/routers/: agent.py  app.py  application.py  clients.py  servers.py  sessions.py  tests.py  tools.py
src/mcp_client_scratch/schemas/: requests.py  responses.py  session.py
src/mcp_client_scratch/scripts/: convert_openapi_to_postman.js  dev.py  generate_openapi_schema.py  send_schema_to_postman.py
src/mcp_client_scratch/utils/: constants.py  enums.py  initialize_logic.py  make_llm_request.py  make_request.py  parse_responses.py  tools.py
