[project]
name = "mcp-client-scratch"
version = "0.1.0"
description = ""
authors = [
    {name = "rpw1134",email = "ryanw1134@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1,<0.117.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "openai (>=1.108.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "httpx-sse (>=0.4.1,<0.5.0)",
]

[tool.poetry.scripts]
dev = "mcp_client_scratch.scripts.dev:dev"


[tool.poetry]
packages = [{include = "mcp_client_scratch", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

